# hackathon-agent

./: CHANGELOG_v0.2.0.md  CHANGES_SUMMARY.md  Dockerfile  FEEDBACK_ARCHITECTURE.md  FEEDBACK_LOOP_ANALYSIS.md  IMPROVEMENTS.md  MODEL_SELECTION.md  QUICK_START_v0.2.0.md  README.md  TEMPORAL_LEARNING.md  TESTING.md  TEST_RESULTS.md  hackathon-agent-prompts.txt  pyproject.toml
k8s/: agent.yaml
scripts/: trigger_anomaly.sh
src/agent/: __init__.py  analyzer.py  collector.py  config.py  dashboard.py  main.py  metrics.py  notifier.py
src/agent/static/: index.html
tests/: __init__.py  test_analyzer.py  test_collector.py  test_config.py  test_notifier.py  test_temporal_analysis.py
