[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-agent"
version = "0.1.0"
description = "Agentic anomaly detection agent consuming UC1 and UC2 simulators"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
]

[project.scripts]
hackathon-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["static/**/*"]
