[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon-agent"
version = "0.1.0"
description = "Agentic anomaly detection agent consuming UC1 and UC2 simulators"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "boto3>=1.34.0",
    "rich>=13.7.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "tenacity>=8.2.0",
    "prometheus-client>=0.20.0",
    "structlog>=24.1.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
hackathon-agent = "agent.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent = ["static/**/*"]
